--- a/frontend/src/CSS/Categories.css
+++ b/frontend/src/CSS/Categories.css
@@ -1,3 +1,4 @@
+/* CATEGORY SECTION */
 .category-section {
   display: flex;
   align-items: center;
@@ -60,7 +61,7 @@
   background-color: rgb(26 182 157 / 0.07);
 }
 
-.categories .ai:hover{
+.categories .ai:hover {
   background-color: rgb(26 182 157 / 0.6);
 }
 
@@ -69,13 +70,13 @@
 }
 
 .categories .cs:hover {
-  background-color: rgb(238 74 98 / 0.6);   
+  background-color: rgb(238 74 98 / 0.6);
 }
 
 .categories .mern {
   background-color: rgb(14 205 115 / 0.07);
 }
-.categories .mern:hover{
+.categories .mern:hover {
   background-color: rgb(14 205 115 / 0.6);
 }
 
@@ -119,26 +120,18 @@
   color: white;
 }
 
-.categories .ai:hover img{
+.categories .ai:hover img {
   transform: scale(1.1);
 }
-.categories .mern:hover img{
-  transform: scale(1.2);
-}
-.categories .cs:hover img{
-  transform: scale(1.2);
-}
-.categories .ds:hover img{
-  transform: scale(1.2);
-}
-.categories .da:hover img{
-  transform: scale(1.2);
-}
-.categories .dm:hover img{
+.categories .mern:hover img,
+.categories .cs:hover img,
+.categories .ds:hover img,
+.categories .da:hover img,
+.categories .dm:hover img {
   transform: scale(1.2);
 }
 
-.category-section .browse{
+.category-section .browse {
   width: 10rem;
   gap: 0.7rem;
   display: flex;
@@ -150,28 +143,303 @@
   border-radius: 50px;
   margin-top: 3rem;
   cursor: pointer;
-  color: #14213d!important;
-  background:#ffb703;
-  box-shadow:5px 5px 2px #14213d;
+  color: #14213d !important;
+  background: #ffb703;
+  box-shadow: 5px 5px 2px #14213d;
 }
 
-.category-section .browse:hover{
-  color: white!important;
+.category-section .browse:hover {
+  color: white !important;
   background-color: #5751e1;
   box-shadow: none;
 }
 
+/* TECHCADD SECTION */
 
-@media screen and (max-width:768px) {
-  .category-section{
+.techCadd {
+  height: 35rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 2rem;
+}
+
+.left-div,
+.right-div {
+  width: 50%;
+}
+
+.mainImage {
+  width: 25rem;
+  height: 25rem;
+  top: 4rem;
+  left: 5rem;
+  z-index: 3;
+  position: absolute;
+  border-radius: 20px;
+}
+
+.shape1 {
+  top: 0.5rem;
+  left: 1rem;
+  z-index: 1;
+  position: absolute;
+}
+
+.shape2 {
+  top: 1.5rem;
+  left: 1rem;
+  z-index: 2;
+  position: absolute;
+}
+.shape3 {
+  top: 16rem;
+  left: 10rem;
+  position: absolute;
+}
+
+.right-div h6 {
+  top: 4rem;
+  left: 35rem;
+  position: absolute;
+  color: rgb(118, 118, 118) !important;
+}
+
+.right-div h1 {
+  top: 6rem;
+  left: 35rem;
+  position: absolute;
+  color: #14213d;
+  font-weight: 600;
+}
+
+.right-div h1 span {
+  font-weight: 600;
+  position: relative;
+  color: red !important;
+  display: inline-block;
+}
+
+.right-div h1 span::before {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  border-radius: 50px;
+  background-color: red;
+}
+
+.right-div p {
+  top: 14rem;
+  left: 35rem;
+  right: 2rem;
+  position: absolute;
+  color: rgb(140, 138, 138) !important;
+}
+
+.right-div p span {
+  font-weight: 600;
+  color: rgb(92, 90, 90) !important;
+}
+
+.right-div ul {
+  top: 22rem;
+  left: 33rem;
+  line-height: 2.3rem;
+  position: absolute;
+}
+
+.right-div ul li {
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+/* ABOUT US SECTION*/
+
+.aboutus {
+  text-align: center;
+}
+
+.aboutus h6 {
+  color: rgb(118, 118, 118) !important;
+}
+
+.aboutus h1,.collaborators h1 {
+  color: #14213d;
+  font-weight: 600;
+}
+
+.aboutus div {
+  padding: 2rem;
+  text-align: justify;
+}
+
+.aboutus div p {
+  color: rgb(118, 118, 118) !important;
+}
+
+/* WHY US SECTION */
+
+.whyUs {
+  height: 40rem;
+  padding: 2rem;
+  margin: 2rem;
+  text-align: center;
+}
+
+.whyUs h5,.collaborators h5{
+  color: rgb(140, 138, 138) !important;
+}
+
+.whyUs h1,.brands h1 {
+  color: #14213d;
+  font-weight: 600;
+}
+
+.whyUs p {
+  text-align: center;
+  font-size: 15px;
+  color: #14213d;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.whyUs-flex {
+  margin: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.whyUs-left {
+  text-align: justify;
+  width: 100%;
+}
+
+.whyUs-left ul {
+  margin-top: 1rem;
+  padding: 0rem !important;
+}
+
+.whyUs-left ul li {
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.whyUs-left h2 {
+  margin-top: 1rem;
+  font-weight: 600;
+  color: #14213d;
+}
+
+.whyUs-left p {
+  font-size: 16px;
+  line-height: 1.8rem;
+  text-align: justify;
+}
+
+.whyUs-right .features {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.features .div1,
+.features .div2 {
+  padding: 0.5rem;
+  gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-right: 3px solid #14213d !important;
+  border-bottom: 3px solid #14213d !important;
+}
+
+.features .div3 {
+  padding: 0.5rem;
+  gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-bottom: 3px solid #14213d !important;
+}
+
+.features .div4,
+.features .div5 {
+  padding: 0.5rem;
+  gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-right: 3px solid #14213d;
+}
+
+.features .div6{
+  padding: 0.5rem;
+  gap: 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+/* COLLABORATORS SECTION */
+.collaborators{
+  text-align: center;
+}
+.slider{
+  padding: 2rem;
+}
+
+.mySwiper .swiper-slide {
+  width: 200px;  
+  height: 200px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: center;
+}
+
+.collaborators p {
+  font-size: 14px;
+  padding-block: 10px;
+  padding-inline:300px;
+  color: rgb(118, 118, 118) !important;
+}
+
+/*BRANDS SECTION*/
+.brands{
+  padding-block: 30px;
+  text-align: center;
+}
+
+.brands .brands-name{
+  margin-top: 2rem;
+  gap: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 768px) {
+  .category-section {
     height: 60rem;
   }
 
-  .category-section .browse:hover{
+  .category-section .browse:hover {
     gap: 1.2rem;
   }
 
-  .category-section h2,.category-section p {
+  .category-section h2,
+  .category-section p {
     text-align: center;
   }
 }
