--- a/frontend/src/CSS/Categories.css
+++ b/frontend/src/CSS/Categories.css
@@ -269,7 +269,8 @@
   color: rgb(118, 118, 118) !important;
 }
 
-.aboutus h1,.collaborators h1 {
+.aboutus h1,
+.collaborators h1 {
   color: #14213d;
   font-weight: 600;
 }
@@ -292,11 +293,13 @@
   text-align: center;
 }
 
-.whyUs h5,.collaborators h5{
+.whyUs h5,
+.collaborators h5 {
   color: rgb(140, 138, 138) !important;
 }
 
-.whyUs h1,.brands h1 {
+.whyUs h1,
+.brands h1 {
   color: #14213d;
   font-weight: 600;
 }
@@ -384,7 +387,7 @@
   border-right: 3px solid #14213d;
 }
 
-.features .div6{
+.features .div6 {
   padding: 0.5rem;
   gap: 0.2rem;
   display: flex;
@@ -393,16 +396,16 @@
   flex-direction: column;
 }
 /* COLLABORATORS SECTION */
-.collaborators{
+.collaborators {
   text-align: center;
 }
-.slider{
+.slider {
   padding: 2rem;
 }
 
 .mySwiper .swiper-slide {
-  width: 200px;  
-  height: 200px; 
+  width: 200px;
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -412,23 +415,24 @@
 .collaborators p {
   font-size: 14px;
   padding-block: 10px;
-  padding-inline:300px;
+  padding-inline: 300px;
   color: rgb(118, 118, 118) !important;
 }
 
 /*BRANDS SECTION*/
-.brands{
+.brands {
   padding-block: 30px;
   text-align: center;
 }
 
-.brands .brands-name{
+.brands .brands-name {
   margin-top: 2rem;
   gap: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 @media screen and (max-width: 768px) {
   .category-section {
     height: 100rem;
@@ -441,5 +445,59 @@
   .category-section h2,
   .category-section p {
     text-align: center;
+  }
+
+  .shape1,.shape2,.shape3{
+    display: none;
+  }
+
+  .techCadd {
+    gap: 4rem;
+    height:50rem;
+    padding: 0rem!important;
+    flex-direction: column;
+    margin: 0!important;
+  }
+
+  .left-div, .right-div {
+    width: 100%; 
+    text-align: center; 
+  }
+
+  .mainImage{
+    position: relative; 
+    top: auto;
+    left: auto;
+    width: 20rem;
+    height: 20rem;
+    margin: 0 auto;
+  }
+  .right-div h6,
+  .right-div h1,
+  .right-div p,
+  .right-div ul {
+    position: relative;
+    left: auto;
+    top: auto;
+    text-align: center; 
+  }
+
+  .right-div p{
+    left: 0.2rem;
+    right: 0rem!important;
+    padding-inline: 1rem;
+    text-align: justify!important;
+  }
+  
+  .right-div ul{
+    padding-left: 1rem!important;
+  }
+
+  .aboutus{
+    margin-top: 5rem;
+  }
+
+  .aboutus div{
+    padding: 1rem;
   }
 }
