--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -69,8 +69,9 @@ ul li a{
     display: none;
   }
   .mobile-menu {
+    z-index: 999;
     background-color: white;
-    position: absolute;
+    position: sticky;
   }
   .mobile-menu ul {
     padding: 0rem !important;
@@ -93,7 +94,7 @@ ul li a{
   }
   .mobile-menu .mobile-item .logo-cross {
     display: flex;
-    gap: 14.2rem;
+    gap: 12.2rem;
     align-items: center;
     justify-content: center;
   }
