--- a/frontend/src/CSS/Categories.css
+++ b/frontend/src/CSS/Categories.css
@@ -803,9 +803,16 @@
   }
 
   .onlinecourses {
-    margin-top: 5rem;
     margin-bottom: 20rem;
     height: 380rem !important;
+  }
+
+  .onlinecourses h1{
+    font-size:22px;
+  }
+
+  .onlinecourses h5{
+    font-size:16px;
   }
 
   .popular-courses {
@@ -851,7 +858,7 @@
 
   .quarter {
     width: 20rem;
-    top: 365rem;
+    top: 370rem;
     height: 30rem;
     margin-inline: 20px;
     grid-template-columns: 2fr;
