--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -33,12 +33,12 @@
   z-index: 1;
   width: 600px;
   height: 500px;
-  animation:slideUp 1.5s ease-in-out forwards!important;
+  animation: slideUp 1.5s ease-in-out forwards !important;
 }
 
 @keyframes slideUp {
   from {
-    transform: scale(0) translate(50px, 100vh); 
+    transform: scale(0) translate(50px, 100vh);
     opacity: 0;
   }
   to {
@@ -77,10 +77,11 @@
   margin-right: 22rem;
   margin-bottom: 25rem;
   z-index: 1;
+  left: 0;
   width: 300px;
   height: 300px;
   position: absolute;
-  animation: slideIn 3s ease-in-out;
+  animation: slideIn 1s linear forwards;
 }
 
 @keyframes slideIn {
@@ -184,6 +185,8 @@
   border: #0077b6;
   font-family: "Poppins";
   background-color: #5751e1;
+  position: relative;
+  z-index: 99;
   box-shadow: 5px 5px 2px #14213d;
 }
 
