--- a/frontend/src/CSS/About.css
+++ b/frontend/src/CSS/About.css
@@ -435,4 +435,8 @@
   .why-chose-us span h1 {
     font-size: 28px;
   }
+
+  .CTA-wrapper::before {
+    clip-path: polygon(0 100%, 100% 0%, 100% 100%, 0% 100%);
+  }
 }
