--- a/frontend/src/CSS/Breadcrumbs.css
+++ b/frontend/src/CSS/Breadcrumbs.css
@@ -64,7 +64,17 @@
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
   border-radius: 50%;
+}
+
+.categories .ai:hover,
+.categories .mern:hover,
+.categories .cs:hover,
+.categories .ds:hover,
+.categories .da:hover,
+.categories .dm:hover {
+  transform: scale(1.1);
 }
 
 .categories .ai {
@@ -443,7 +453,6 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-top: 4rem;
 }
 
 .management .names {
@@ -975,6 +984,79 @@
   width: 10rem;
 }
 
+.myswiper .swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  border-radius: 5px;
+  width: 100%;
+  height: 17rem;
+}
+
+.myswiper img {
+  height: 12rem;
+  width: 100%;
+}
+
+.gallery-wrapper{
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.gallery-wrapper h1 {
+  font-size: 35px;
+  font-weight: 600;
+  color: black;
+}
+
+.gallery-wrapper .stroke {
+  width: 10rem;
+  margin-left: -3rem;
+}
+
+.swiper-container {
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.custom-navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.custom-prev,
+.custom-next {
+  width: 70px;
+  height: 50px;
+  background: white;
+  border: none;
+  box-shadow: 0px 4px 6px 4px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  transition: background 0.3s ease;
+}
+
+.custom-prev:hover,
+.custom-next:hover {
+  background: #14213d;
+  color: white;
+}
+
+.custom-prev {
+  border-radius: 25px 25px 0;
+}
+
+.custom-next {
+  border-radius: 25px 25px 25px 0;
+}
+
 @media screen and (max-width: 768px) {
   .category-section {
     height: 100rem;
@@ -1120,6 +1202,10 @@
     font-size: 16px;
   }
 
+  .gallery-wrapper h1{
+    font-size: 28px!important;
+  }
+
   .row1,
   .row2,
   .row3 {
@@ -1134,6 +1220,12 @@
     margin-left: 4rem;
   }
 
+  .gallery-wrapper .stroke{
+    width: 8rem;
+    margin-top: -1rem;
+    margin-left: -3rem;
+
+  }
   .popular-courses .card {
     width: 20rem;
     height: 28rem;
